@@ -31,37 +31,7 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-graphics</artifactId>
             <version>${javafx.version}</version>
-            <classifier>win</classifier>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.13.0</version>
-            </plugin>
-
-            <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.8</version>
-                <configuration>
-                    <mainClass>com.psio.Main</mainClass>
-                    <options>
-                        <option>--enable-native-access=ALL-UNNAMED,javafx.graphics</option>
-
-                        <option>--add-opens</option>
-                        <option>java.base/java.nio=ALL-UNNAMED</option>
-                        <option>--add-opens</option>
-                        <option>java.desktop/sun.awt=ALL-UNNAMED</option>
-                        <option>--add-opens</option>
-                        <option>java.desktop/sun.font=ALL-UNNAMED</option>
-                    </options>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
